--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -133,10 +133,15 @@
     <ClCompile Include="Actions\AddHexAction.cpp" />
     <ClCompile Include="Actions\AddSqrAction.cpp" />
     <ClCompile Include="Actions\AddTriAction.cpp" />
+    <ClCompile Include="Actions\CAll.cpp" />
     <ClCompile Include="Actions\ChangeDrawcolorAction.cpp" />
     <ClCompile Include="Actions\ChangeFillColorAction.cpp" />
     <ClCompile Include="Actions\DeleteFig.cpp" />
     <ClCompile Include="Actions\MoveAction.cpp" />
+    <ClCompile Include="Actions\PickAndHide.cpp" />
+    <ClCompile Include="Actions\PickByFigFill.cpp" />
+    <ClCompile Include="Actions\PickByFigure.cpp" />
+    <ClCompile Include="Actions\PickByFill.cpp" />
     <ClCompile Include="Actions\SaveAction.cpp" />
     <ClCompile Include="Actions\SelectFigure.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
@@ -192,10 +197,15 @@
     <ClInclude Include="Actions\AddHexAction.h" />
     <ClInclude Include="Actions\AddSqrAction.h" />
     <ClInclude Include="Actions\AddTriAction.h" />
+    <ClInclude Include="Actions\CAll.h" />
     <ClInclude Include="Actions\ChangeDrawcolorAction.h" />
     <ClInclude Include="Actions\ChangeFillColorAction.h" />
     <ClInclude Include="Actions\DeleteFig.h" />
     <ClInclude Include="Actions\MoveAction.h" />
+    <ClInclude Include="Actions\PickAndHide.h" />
+    <ClInclude Include="Actions\PickByFigFill.h" />
+    <ClInclude Include="Actions\PickByFigure.h" />
+    <ClInclude Include="Actions\PickByFill.h" />
     <ClInclude Include="Actions\SaveAction.h" />
     <ClInclude Include="Actions\SelectFigure.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
