--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="Actions\PickByFill.cpp" />
     <ClCompile Include="Actions\SaveAction.cpp" />
     <ClCompile Include="Actions\SelectFigure.cpp" />
+    <ClCompile Include="Actions\SwitchToDraw.cpp" />
+    <ClCompile Include="Actions\SwitchToPlay.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
     <ClCompile Include="CMUgraphicsLib\CMUgraphics.cpp" />
     <ClCompile Include="CMUgraphicsLib\colors.cpp" />
@@ -208,6 +210,8 @@
     <ClInclude Include="Actions\PickByFill.h" />
     <ClInclude Include="Actions\SaveAction.h" />
     <ClInclude Include="Actions\SelectFigure.h" />
+    <ClInclude Include="Actions\SwitchToDraw.h" />
+    <ClInclude Include="Actions\SwitchToPlay.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
     <ClInclude Include="CMUgraphicsLib\CMUgraphics.h" />
     <ClInclude Include="CMUgraphicsLib\colors.h" />
