--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -128,6 +128,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Paint-For-Kids-final\Actions\UndoAction.cpp" />
     <ClCompile Include="Actions\Action.cpp" />
     <ClCompile Include="Actions\AddCircAction.cpp" />
     <ClCompile Include="Actions\AddHexAction.cpp" />
@@ -189,6 +190,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Paint-For-Kids-final\Actions\UndoAction.h" />
     <ClInclude Include="Actions\AddCircAction.h" />
     <ClInclude Include="Actions\AddHexAction.h" />
     <ClInclude Include="Actions\AddSqrAction.h" />
