--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -223,6 +223,11 @@
     <ClCompile Include="Actions\PlayRecordingAction.cpp">
       <Filter>Action Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Actions\LoadAction.cpp" />
+    <ClCompile Include="Actions\UndoAction.cpp" />
+    <ClCompile Include="Actions\RedoAction.cpp">
+      <Filter>Action Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -371,7 +376,7 @@
       <Filter>Action Classes</Filter>
     </ClInclude>
     <ClInclude Include="Actions\SwitchToPlay.h">
-     <Filter>Action Classes</Filter>
+      <Filter>Action Classes</Filter>
     </ClInclude>
     <ClInclude Include="Actions\StartRecordingAction.h">
       <Filter>Action Classes</Filter>
@@ -380,6 +385,11 @@
       <Filter>Action Classes</Filter>
     </ClInclude>
     <ClInclude Include="Actions\PlayRecordingAction.h">
+      <Filter>Action Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\LoadAction.h" />
+    <ClInclude Include="Actions\UndoAction.h" />
+    <ClInclude Include="Actions\RedoAction.h">
       <Filter>Action Classes</Filter>
     </ClInclude>
   </ItemGroup>
